<resources>
    <string name="app_name">Bandm8s</string>
    <string name="title_activity_main">Bandm8s</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_confirm">Confirm</string>
    <string name="saveChangedDataInProfile">saveData</string>
    <string name="changeProfilePicInProfile">changeProfilePic</string>
    <string name="action_startChat">Chat</string>
    <string name="action_showProfile">Profile</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Password(again)</string>
    <string name="prompt_username">Name</string>
    <string name="prompt_firstname">First Name (Optional)</string>
    <string name="prompt_lastname">Last Name (Optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">Email or password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_username_required">Username is required</string>
    <string name="error_registration_failed">Registration failed!</string>


    <!-- Strings related to profile picture -->
    <string name="profile_username">profileUsername</string>
    <string name="profile_genre">Genre: </string>
    <string name="profile_skill">Skill: </string>
    <string name="profile_biography">Biography: </string>
    <string name="profile_biography_hint">Enter your Biography </string>
    <string name="profile_instruments">Instruments: </string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_profile">User Profile</string>
    <string name="title_activity_other_profile">Other User Profile</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_login">Login</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="profile_settings">Profile Settings</string>
    <string name="logout">Logout!</string>

    <!-- Strings related to Chat-->
    <string name="write_message">Your message</string>

    <!-- Strings related to Entry Creation and Detail -->
    <string name="entry_title">Title</string>
    <string name="entry_location">Location</string>
    <string name="entry_instruments">Instruments</string>
    <string name="entry_genre">Genre</string>
    <string name="entry_skill">Skill-Level</string>
    <string name="entry_author">Author</string>

    <string name="banner_ad_unit_id">ca-app-pub-8757458302977686/2799565851</string>

</resources>
