<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_entry_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="bandm8s.hagenberg.fh.bandm8s.EntryDetailActivity">


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="10dp">

        <TextView
            android:text="@string/entry_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblAuthor_detail"
            android:layout_weight="1" />

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblAuthorContent_detail"
            android:layout_weight="1" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="10dp">

        <TextView
            android:text="@string/entry_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblTitle_detail"
            android:layout_weight="1" />

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblTitleContent_detail"
            android:layout_weight="1"/>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="10dp">

        <TextView
            android:text="@string/entry_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblGenre_detail"
            android:layout_weight="1" />

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblGenreContent_detail"
            android:layout_weight="1"/>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="10dp">

        <TextView
            android:text="@string/entry_skill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblSkill_detail"
            android:layout_weight="1" />

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblSkillContent_detail"
            android:layout_weight="1"/>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="10dp">

        <TextView
            android:text="@string/entry_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblLocation_detail"
            android:layout_weight="1"/>

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblLocationContent_detail"
            android:layout_weight="1"/>

    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="10dp">

        <TextView
            android:text="@string/entry_instruments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblInstruments_detail"
            android:layout_weight="1"/>

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblInstrumentsContent_detail"
            android:layout_weight="1"
            android:maxLines="4"
            android:lines="4"
            android:scrollbars = "vertical"/>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/lblDescription_detail"
            android:layout_weight="1"
            android:scrollbars = "vertical"
            android:text="TextView"/>

    </TableRow>

</TableLayout>
