<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/header_cover_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/bandpicture" />



        <ImageView
            android:id="@+id/user_profile_photo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/header_cover_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-60dp"
            android:adjustViewBounds="true"
            android:background="@drawable/circular_border_image"
            android:elevation="5dp"
            android:scaleType="fitXY"
            android:src="@drawable/user_band_cbe4418fb27a65aab32033a18b86c4b8" />


        <RelativeLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/header_cover_image"
            android:background="@color/colorPrimary"
            android:descendantFocusability="beforeDescendants"
            android:elevation="2dp"
            android:focusableInTouchMode="true"
            android:paddingBottom="20dp">

            <ImageButton
                android:id="@+id/startChat"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:paddingTop="20dp"
                android:paddingBottom="24dp"
                android:src="@drawable/ic_menu_send"
                android:background="@null"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
            <TextView
                android:id="@+id/other_user_profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="160dp"
                android:text=""
                android:textColor="#fff"
                android:textSize="24sp"
                android:textStyle="bold" />


        </RelativeLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_layout"
            android:layout_marginTop="5dp"
            android:orientation="vertical">
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#fff"
                android:clickable="true"
                android:padding="10dp">

                <TextView
                    android:id="@+id/other_user_profile_genre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/profile_genre"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/GenresString"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#fff"
                android:clickable="true"
                android:padding="10dp">

                <TextView
                    android:id="@+id/lblSkill"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/profile_skill" />

                <TextView
                    android:id="@+id/SkillString"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#fff"
                android:clickable="true"
                android:padding="10dp">

                <TextView
                    android:text="@string/profile_instruments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lblInstruments"
                    android:layout_weight="1"/>


                <TextView
                    android:id="@+id/InstrumentsString"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <!--
                <CheckedTextView
                    android:text="Instruments"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkedTextViewInstruments"
                    android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                    android:layout_weight="1"
                    android:checked="true" />
                    -->
            </TableRow>


            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#fff"
                android:clickable="true"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/profile_biography"
                    android:textSize="14sp" />


            </TableRow>


            <TextView
                android:id="@+id/user_biography"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:background="#fff"
                android:ems="10"
                android:gravity="top|left"
                android:lines="25"
                android:maxLines="25"
                android:minLines="5"
                android:paddingBottom="20dp"
                android:paddingEnd="10dp"
                android:paddingLeft="15dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:scrollbars="vertical" />

        </LinearLayout>
    </RelativeLayout>
</ScrollView>